Fix misaligned callout in volumetrics graph

--- a/app/assets/stylesheets/vehicle-licensing.scss
+++ b/app/assets/stylesheets/vehicle-licensing.scss
@@ -7,6 +7,15 @@
   }
 }
 
+.vehicle-licensing-volumetrics {
+
+  ul.module-actions {
+    margin-top:-36px;
+    margin-bottom: 44px;
+  }
+}
+
+
 .failures {
 
   ul.module-actions {
